<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MobileApp</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_forum">ForumActivity</string>
    <string name="title_activity_my_question">MyQuestionActivity</string>
    <string name="title_activity_my_answer">MyAnswerActivity</string>
    <string name="title_activity_qa">QAActivity</string>
    <string name="title_activity_setting">SettingActivity</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="title_activity_noti_freq">NotiFreqActivity</string>
    <string name="main_button_profile">Profile</string>
    <string name="main_button_myQuestion">My Questions</string>
    <string name="main_button_myAnswer">My Answers</string>
    <string name="main_button_select_forum">Select Forum</string>
    <string name="main_button_enter_forum">Enter Forum</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_account">AccountActivity</string>
    <string name="serverUrl">http://nearby.elasticbeanstalk.com</string>
    <string name="HNT_PASSWORD">Password</string>
    <string name="login_title">Log in to access your account!</string>
    <string name="emailaddress">Email Address</string>
    <string name="login">Log In</string>
    <string name="notnow">Not Now</string>
    <string name="signup_title">Create an account in seconds.</string>
    <string name="signup">Sign Up</string>
    <string name="title_activity_signup">Signup</string>
    <string name="firstname">First Name</string>
    <string name="lastname">Last Name</string>
    <string name="allowemail">I do not want to receive email about movie information</string>
    <string name="HNT_EMAIL_ADDRESS">Please enter your email</string>
    <string name="reset_password">Forget Password</string>
    <string name="BTN_EMAIL">Reset Password</string>
    <string name="enter_username">Enter Username</string>
    <string name="enter_password">Enter Password</string>
    <string name="exit">Exit</string>
    <string name="new_user">New User</string>
    <string name="title_activity_register">registerActivity</string>
    <string name="title_activity_new_forum">newForumActivity</string>
    <string name="preference_file_key">com.android.mobileapp.PREFERENCE_FILE_KEY</string>
    <string name="action_logout">Logout</string>
    <string name="drawer_open">open</string>
    <string name="drawer_close">close</string>
    <string name="title_activity_tab_host">TabHostActivity</string>
    <string name="title_activity_search_result">SearchResultActivity</string>
    <string name="add_new_question">Ask new question</string>
    <string name="add_new_answer">Answer question</string>
    <string name="map_to_forum_intent_extra">com.android.mobileapp.forumId</string>
    <string name="title_activity_myqa">MyqaActivity</string>

    <!-- question in intent -->
    <string name="Q_ID">"com.android.mobileapp.q_id"</string>
    <string name="Q_CONTENT">com.android.mobileapp.q_content</string>
    <string name="Q_RATE">com.android.mobileapp.q_rate</string>
    <string name="F_ID">com.android.mobileapp.f_id</string>
    <string name="Q_USER">com.android.mobile.q_user</string>
    <string name="question_search_content">com.android.mobile.question_search_content</string>
    <!-- User login -->
    <string name="user_score">com.android.mobileapp.user_score</string>
    <string name="create_new_account">Create New Account</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="done">Done</string>
    <string name="cancel">Cancel</string>
    <string name="user_question_count">com.android.mobileapp.user_quesiton_count</string>
    <string name="user_answer_count">com.android.mobileapp.user_answer_count</string>
    <string name="title_activity_forum_search">ForumSearchActivity</string>

    <!-- Forum search-->
    <string name="forum_search_content">com.android.mobileapp.forum_search_content</string>
</resources>
