<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.ming.dayouxia.theaterapp.fragmentsforsignin.SignupFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/firstname_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/firstname"
            android:background="@drawable/textbox"
            android:inputType="text"
            android:singleLine="true" />

        <EditText
            android:id="@+id/lastname_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/lastname"
            android:background="@drawable/textbox"
            android:inputType="text"
            android:layout_marginTop="10dip"
            android:singleLine="true" />


        <EditText
            android:id="@+id/email_signup_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/emailaddress"
            android:background="@drawable/textbox"
            android:inputType ="textEmailAddress"
            android:layout_marginTop="10dip"
            android:singleLine="true" />

        <EditText
            android:id="@+id/password_signup_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/HNT_PASSWORD"
            android:background="@drawable/textbox"
            android:inputType ="textPassword"
            android:layout_marginTop="10dip"
            android:singleLine="true" />

        <CheckBox
            android:id="@+id/checkbox_meat"
            android:layout_marginTop="10dip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/allowemail"
            android:textColor="@color/maintextcolor"
            android:textSize="15sp"/>

        <Button
            android:id="@+id/new_user_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:background="@drawable/buttonbox"
            android:text="@string/signup" />


    </LinearLayout>

</RelativeLayout>
