<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.edutechnologic.theaterar.Login">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dip"
            android:text="@string/login_title"
            android:textColor="@color/maintextcolor"
            android:textSize="20.5sp" />

        <EditText
            android:id="@+id/email_login_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/emailaddress"
            android:background="@drawable/textbox"
            android:inputType ="textEmailAddress"
            android:singleLine="true" />

        <EditText
            android:id="@+id/password_login_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/HNT_PASSWORD"
            android:background="@drawable/textbox"
            android:inputType ="textPassword"
            android:singleLine="true" />

        <Button
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip"
            android:background="@drawable/buttonbox"
            android:text="@string/login" />

        <Button
            android:id="@+id/password_reset"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip"
            android:background="@drawable/buttonbox"
            android:text="Forget Password" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="40dip"
            android:text="@string/signup_title"
            android:textColor="@color/maintextcolor"
            android:textSize="20.5sp" />

        <Button
            android:id="@+id/signup_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip"
            android:background="@drawable/buttonbox"
            android:text="@string/signup" />
    </LinearLayout>



</RelativeLayout>
