<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dip"
        android:text="@string/reset_password"
        android:textColor="@color/maintextcolor"
        android:textSize="27sp" />

    <TextView
        android:id="@+id/resetEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/HNT_EMAIL_ADDRESS"
        android:textColor="@color/maintextcolor"
        android:textSize="20.5sp"/>

    <EditText
        android:id="@+id/email_comfirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/emailaddress"
        android:background="@drawable/textbox"
        android:inputType ="textEmailAddress"
        android:layout_marginTop="10dip"
        android:singleLine="true" />

    <Button
        android:id="@+id/email_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:background="@drawable/buttonbox"
        android:text="@string/BTN_EMAIL" />

</LinearLayout>